canary_deployment/deployment_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visualizer-ingress
  namespace: microserviceLab
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visualizer-service
                port:
                  number: 8093

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visualizer-ingress-canary
  namespace: microserviceLab
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "0"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visualizer-service-canary
                port:
                  number: 8099
